--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "la-mission-parfaite",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.0",
+    "@rails/actioncable": "^6.1.4-1",
+    "@rails/activestorage": "^6.1.4-1",
+    "@rails/ujs": "^6.1.4-1",
+    "@rails/webpacker": "5.4.3",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.3.1"
   }
 }
